[DD-000] Update readme, update config for site install
Added platform requirements.

--- a/config/sync/core.entity_form_display.node.webform.default.yml
+++ b/config/sync/core.entity_form_display.node.webform.default.yml
@@ -87,4 +87,5 @@ content:
     third_party_settings: {  }
     type: webform_entity_reference_select
     region: content
-hidden: {  }
+hidden:
+  layout_builder__layout: true
