--- a/config/sync/core.entity_view_display.node.webform.default.yml
+++ b/config/sync/core.entity_view_display.node.webform.default.yml
@@ -95,4 +95,5 @@ content:
     third_party_settings: {  }
     type: webform_entity_reference_entity_view
     region: content
-hidden: {  }
+hidden:
+  layout_builder__layout: true
