--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # Ignore sensitive information
 /web/sites/*/settings.php
 /web/sites/*/settings.local.php
+/web/sites/example.*
 
 # Ignore Drupal's file directory
 /web/sites/*/files/
