[DD-000] Update composer libraries and add frmwrk_decoupled
Added files and private files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 
 # Ignore Drupal's file directory
 /web/sites/*/files/
+/web/files
+/private
 
 # Ignore SimpleTest multi-site environment.
 /web/sites/simpletest
