--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "drupal/metatag": "^1.8",
         "drupal/paragraphs": "^1.8",
         "drupal/pathauto": "^1.4",
+        "drupal/rabbit_hole": "^1.0@beta",
         "drupal/real_aes": "^2.2",
         "drupal/redirect": "^1.4",
         "drupal/restui": "^1.17",
@@ -134,6 +135,11 @@
             "web/profiles/contrib/{$name}": ["type:drupal-profile"],
             "web/themes/contrib/{$name}": ["type:drupal-theme"],
             "drush/Commands/contrib/{$name}": ["type:drupal-drush"]
+        },
+        "patches": {
+            "drupal/rabbit_hole": {
+                "2900548 - Add commerce products" : "https://www.drupal.org/files/issues/commerce_support-2900548-3.patch"
+            }
         }
     }
 }
