--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -26,6 +26,7 @@ module:
   entity_reference_revisions: 0
   field: 0
   field_defaults: 0
+  field_group: 0
   field_ui: 0
   file: 0
   filter: 0
@@ -40,6 +41,7 @@ module:
   layout_builder_restrictions: 0
   layout_discovery: 0
   layout_library: 0
+  length_indicator: 0
   link: 0
   linkit: 0
   login_security: 0
@@ -61,6 +63,7 @@ module:
   redirect_404: 0
   rest: 0
   seckit: 0
+  select2: 0
   serialization: 0
   session_limit: 0
   simple_oauth: 0
