[DD-000] Add modules and config for them
admin_toolbar_tools
autosave
content lock
Better exposed filters
menu_admin_per_menu
path_redirect_import
taxonomy_menu
taxonomy_term_depth

--- a/config/sync/config_split.config_split.development.yml
+++ b/config/sync/config_split.config_split.development.yml
@@ -1,6 +1,6 @@
 uuid: 6a2babc6-58f9-4486-9169-168a8b310c32
 langcode: en
-status: true
+status: false
 dependencies: {  }
 id: development
 label: Development
@@ -11,7 +11,6 @@ module:
   devel_php: 0
   field_tools: 0
   kint: 0
-  menu_ui: 0
   restui: 0
   update: 0
   views_ui: 0
