--- a/template.gitlab-ci.yml
+++ b/template.gitlab-ci.yml
@@ -1,12 +1,12 @@
 before_script:
-- . /var/scripts/before-script.sh
+  - . /var/scripts/before-script.sh
 stages:
-- packages
-- quality
-- build
-- preparation
-- test
-- deploy
+  - packages
+  - quality
+  - build
+  - preparation
+  - test
+  - deploy
 
 Composer packages:
   image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
@@ -28,126 +28,111 @@ Composer packages:
       - web/profiles/contrib
       - drush/contrib
 
-NPM packages:
-  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
-  stage: packages
-  dependencies: []
-  script: dep packages:npm_packages $STAGE -vv # npm install
-  artifacts:
-    name: "$CI_JOB_NAME"
-    paths:
-      - node_modules
-      - aankoop-app/node_modules
-      - web/themes/custom/wrkdrupal/node_modules
-      - ~/.cache/Cypress
-  cache:
-    paths:
-      - node_modules
-      - aankoop-app/node_modules
-      - web/themes/custom/wrkdrupal/node_modules
-      - ~/.cache/Cypress
-    key:  "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
+#NPM packages:
+#  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
+#  stage: packages
+#  dependencies: []
+#  script: dep packages:npm_packages $STAGE -vv # npm install
+#  artifacts:
+#    name: "$CI_JOB_NAME"
+#    paths:
+#      - frontend/node_modules
+#      - ~/.cache/Cypress
+#  cache:
+#    paths:
+#      - frontend/node_modules
+#      - ~/.cache/Cypress
+#    key:  "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
 
-
-Lighthouse:
-  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupaltestci:chrome-tools
-  stage: quality
-  variables:
-    LIGHTHOUSE_TEST_URL: "https://www.wrkdrupal.nl/"
-  script:
-    # Run Lighthouse test
-    - dep drupalci:lighthouse $STAGE -vv
-  artifacts:
-    paths:
-      - ./report.html
-    expire_in: 1 week
+#Lighthouse:
+#  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupaltestci:chrome-tools
+#  stage: quality
+#  variables:
+#    LIGHTHOUSE_TEST_URL: "https://over.rexel.nl/"
+#  script:
+#    # Run Lighthouse test
+#    - dep drupalci:lighthouse $STAGE -vv
+#  artifacts:
+#    paths:
+#      - ./report.html
+#    expire_in: 1 week
 
 Code quality:
   image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
   stage: quality
   dependencies:
     - Composer packages
-  script: dep quality:code_quality $STAGE -vvv # grumphp run
-  allow_failure: true # set false when tests are run well
-
-Validate packages:
-  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
-  stage: quality
-  dependencies: []
   script:
-  - dep quality:validate_packages $STAGE -vvv # composer validate / --strict trows zero exit code
+    - dep quality:code_quality $STAGE -vvv # grumphp run
+    - dep quality:validate_packages $STAGE -vvv
+  allow_failure: false # set false when tests are run well
 
 Config:
   image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
   dependencies: []
   stage: build
   script:
-  - dep drupal:htaccess $STAGE
-  - dep drupal:settings $STAGE
+    - dep drupal:htaccess $STAGE
+    - dep drupal:settings $STAGE
   artifacts:
     name: "$CI_JOB_NAME"
     paths:
-    - web/.htaccess
-    - .htpasswd
-    - web/sites/default/settings.php
+      - web/.htaccess
+      - .htpasswd
+      - web/sites/default/settings.php
 
-Grunt:
-  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
-  dependencies:
-  - NPM packages
-  stage: build
-  script: dep build:grunt $STAGE # grunt css
-  artifacts:
-    name: "$CI_JOB_NAME"
-    paths:
-    - web/themes/custom/wrkdrupal/css
+#Grunt:
+#  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
+#  dependencies:
+#    - NPM packages
+#  stage: build
+#  script: dep build:grunt $STAGE # grunt css
+#  artifacts:
+#    name: "$CI_JOB_NAME"
+#    paths:
+#      - web/themes/custom/rexel/css
 
-.job_template: &angular_template
-  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
-  dependencies:
-  - NPM packages
-  stage: build
-  artifacts:
-    name: "$CI_JOB_NAME"
-    paths:
-    - bestellen
 
-Angular:
-  <<: *angular_template
-  script: dep build:angular $STAGE -vv #ng build
+#Nextjs:
+#  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
+#  dependencies:
+#    - NPM packages
+#  stage: build
+#  script: dep build:next $STAGE
+#  artifacts:
+#    name: "$CI_JOB_NAME"
+#    paths:
+#      - dist
 
-Mysql:
-  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:docker
-  stage: preparation
-  dependencies: []
-  services:
-    - docker:dind
-  variables:
-    DOCKER_REGISTRY: gitlab.frmwrk.nl:5005/$CI_PROJECT_PATH
-    DOCKER_IMAGE: mysql:5.7-default
-    DOCKER_HOST: tcp://docker:2375
-    DOCKER_DRIVER: overlay2
-  script:
-    - . /var/scripts/mysql-script.sh
-  artifacts:
-    name: "Sanitized sql dump"
-    paths:
-      - default-sanitized.sql.gz
-    expire_in: 1 days
-  tags:
-    - privileged
-  only:
-    variables:
-      - $BUILD
+#Mysql:
+#  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:docker
+#  stage: preparation
+#  dependencies: []
+#  services:
+#    - docker:dind
+#  variables:
+#    DOCKER_REGISTRY: gitlab.frmwrk.nl:5005/$CI_PROJECT_PATH
+#    DOCKER_IMAGE: mysql:5.7-default
+#    DOCKER_HOST: tcp://docker:2375
+#    DOCKER_DRIVER: overlay2
+#  script:
+#    - . /var/scripts/mysql-script.sh
+#  artifacts:
+#    name: "Sanitized sql dump"
+#    paths:
+#      - default-sanitized.sql.gz
+#    expire_in: 1 days
+#  tags:
+#    - privileged
+#  only:
+#    variables:
+#      - $BUILD
 
 Feature build:
   image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:docker
   stage: preparation
   dependencies:
     - Composer packages
-    - NPM packages
-    - Grunt
-    - Angular
   services:
     - docker:dind
   variables:
@@ -172,32 +157,31 @@ Feature build:
 #  script: dep test:phpunit $STAGE -vvv #vendor/bin/phpunit -c web/core/ --testsuite=unit
 #  allow_failure: true # set false when tests are run well
 
-Cypress:
-  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupaltestci:chrome-tools
-  dependencies:
-    - Composer packages
-    - NPM packages
-    - Config
-    - Grunt
-    - Angular
-  services:
-    - name: gitlab.frmwrk.nl:5005/$CI_PROJECT_PATH/mysql:default-fixtures
-      alias: mysql
-  variables:
-    MYSQL_DATABASE: drupal
-    MYSQL_ROOT_PASSWORD: frmwrk
-  stage: test
-  script:
-    - dep test:cypress $STAGE -vv
-  artifacts:
-    expire_in: 1 week
-    when: on_failure
-    paths:
-    - cypress/screenshots
-    - cypress/videos
-  except:
-    variables:
-      - $DISABLETESTS
+#Cypress:
+#  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupaltestci:chrome-tools
+#  dependencies:
+#    - Composer packages
+#    - NPM packages
+#    - Config
+##    - Nextjs
+#  services:
+#    - name: gitlab.frmwrk.nl:5005/$CI_PROJECT_PATH/mysql:default-fixtures
+#      alias: mysql
+#  variables:
+#    MYSQL_DATABASE: drupal
+#    MYSQL_ROOT_PASSWORD: frmwrk
+#  stage: test
+#  script:
+#    - dep test:cypress $STAGE -vv
+#  artifacts:
+#    expire_in: 1 week
+#    when: on_failure
+#    paths:
+#    - cypress/screenshots
+#    - cypress/videos
+#  except:
+#    variables:
+#      - $DISABLETESTS
 
 # Deployment tasks
 .job_template: &deploy_template
@@ -205,10 +189,10 @@ Cypress:
   stage: deploy
   when: manual
   dependencies:
-  - Composer packages
-  - Config
-  - Grunt
-  - Angular
+    - Composer packages
+    - Config
+  #  - Grunt
+  #  - Nextjs
   allow_failure: false
 
 Deploy development:
@@ -219,10 +203,10 @@ Deploy development:
     url: https://dev.wrkdrupal.nl
   only:
     refs:
-    - development
+      - development
   script:
-  - dep deploy development
-  - dep drupalci:slack $STAGE --message="Deploy naar $CI_ENVIRONMENT_NAME is afgerond"
+    - dep deploy development
+    - dep drupalci:slack $STAGE --message="Deploy naar $CI_ENVIRONMENT_NAME is afgerond"
 
 Deploy demo:
   <<: *deploy_template
@@ -231,10 +215,10 @@ Deploy demo:
     url: https://acc.wrkdrupal.nl
   only:
     refs:
-    - demo
+      - demo
   script:
-  - dep deploy demo
-  - dep drupalci:slack $STAGE --message="Deploy naar $CI_ENVIRONMENT_NAME is afgerond"
+    - dep deploy demo
+    - dep drupalci:slack $STAGE --message="Deploy naar $CI_ENVIRONMENT_NAME is afgerond"
 
 Deploy production:
   <<: *deploy_template
@@ -243,11 +227,11 @@ Deploy production:
     url: https://www.wrkdrupal.nl
   only:
     refs:
-    - master
-    - production
+      - master
+      - production
   script:
-  - dep deploy production
-  - dep drupalci:slack $STAGE --message="Deploy naar $CI_ENVIRONMENT_NAME is afgerond"
+    - dep deploy production
+    - dep drupalci:slack $STAGE --message="Deploy naar $CI_ENVIRONMENT_NAME is afgerond"
 
 Deploy feature:
   image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:docker
@@ -259,15 +243,12 @@ Deploy feature:
     DOCKER_HOST: tcp://docker:2375
     DOCKER_DRIVER: overlay2
   environment:
-    name: $CI_COMMIT_REF_SLUG deployment
-    url: https://$CI_COMMIT_REF_SLUG.test.frmwrk.nl
+    name: $CI_PROJECT_NAME-$CI_COMMIT_REF_SLUG deployment
+    url: https://$CI_PROJECT_NAME-$CI_COMMIT_REF_SLUG.test.frmwrk.nl
     on_stop: Remove deployed feature
   dependencies:
     - Composer packages
-    - NPM packages
     - Config
-    - Grunt
-    - Angular
     - Feature build
   stage: deploy
   script:
@@ -281,20 +262,49 @@ Deploy feature:
     - dep deploy:upload_stack swarm -vvv
     - dep deploy:deploy_stack swarm -vvv
     # - dep drupalci:slack development --message="Deploy naar https://$CI_PROJECT_NAME-$CI_COMMIT_REF_SLUG.test.frmwrk.nl is afgerond"
-  except:
-    refs:
-      - demo
-      - development
-      - master
-      - production
+  only:
+    variables:
+      - $BUILD
   tags:
     - privileged
+
+#Deploy NOW:
+#  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
+#  stage: deploy
+#  environment:
+#    name: NOW $CI_COMMIT_REF_SLUG
+#    url: https://rexel.zeit.frmwrk.nl
+#    on_stop: Remove NOW
+#  when: manual
+#  only:
+#    refs:
+#      - master
+#      - demo
+#      - development
+#  script:
+#    - dep deploy:now $STAGE -vvv
+#
+#Remove NOW:
+#  image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:buildtools-d8
+#  stage: deploy
+#  when: manual
+#  script:
+#    - dep deploy:now_remove $STAGE -vvv
+#  environment:
+#    name: NOW $CI_COMMIT_REF_SLUG
+#    action: stop
+#  only:
+#    refs:
+#      - master
+#      - demo
+#      - development
+
 
 Remove deployed feature:
   image: gitlab.frmwrk.nl:5005/frmwrk-general/drupalci:docker
   stage: deploy
   environment:
-    name: $CI_COMMIT_REF_SLUG deployment
+    name: $CI_PROJECT_NAME-$CI_COMMIT_REF_SLUG deployment
     action: stop
   script:
     - dep drupalci:prepare swarm
@@ -303,17 +313,18 @@ Remove deployed feature:
   dependencies: []
   tags:
     - privileged
+  only:
+    variables:
+      - $BUILD
 
 Prepare environment:
   <<: *deploy_template
   only:
     refs:
-    - master
-    - production
-    - acceptation
-    - demo
-    - development
+      - master
+      - demo
+      - development
     variables:
-    - $NEW
+      - $NEW
   script:
-  - dep deploy:prepare $STAGE -vvv
+    - dep deploy:prepare $STAGE -vvv
